<!--
  ~ pom.xml Copyright (C) 2022 Daniel H. Huson
  ~
  ~ (Some files contain contributions from other authors, who are then mentioned separately.)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.husonlab</groupId>
    <artifactId>phylosketch</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>PhyloSketch</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <javafx.version>11</javafx.version>
        <javafx.plugin.version>0.0.8</javafx.plugin.version>
        <gluonfx.plugin.version>1.0.15</gluonfx.plugin.version>
        <charm.version>6.1.1</charm.version>
        <attach.version>4.0.15</attach.version>
        <main.class>org.husonlab.phylosketch.Main</main.class>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.husonlab</groupId>
            <artifactId>jloda2</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.39.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq</groupId>
            <artifactId>charm-glisten</artifactId>
            <version>${charm.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>display</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>lifecycle</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>statusbar</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>storage</artifactId>
            <version>${attach.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gluonhq.attach</groupId>
            <artifactId>util</artifactId>
            <version>${attach.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.plugin.version}</version>
                <configuration>
                    <target>${gluonfx.target}</target>
                    <mainClass>${main.class}</mainClass>
                    <attachList>
                        <list>display</list>
                        <list>lifecycle</list>
                        <list>statusbar</list>
                        <list>storage</list>
                    </attachList>
                    <reflectionList>
                        <list>org.husonlab.phylosketch.views.primary.PrimaryController</list>
                        <list>org.husonlab.phylosketch.views.primary.PrimaryView</list>
                        <list>org.husonlab.phylosketch.views.secondary.SecondaryController</list>
                        <list>org.husonlab.phylosketch.views.secondary.SecondaryView</list>
                        <list>org.husonlab.phylosketch.views.other.OtherController</list>
                        <list>org.husonlab.phylosketch.views.other.OtherView</list>
                        <list>org.husonlab.phylosketch.views.labeleditor.LabelEditor</list>
                        <list>org.husonlab.phylosketch.views.labeleditor.LabelEditorController</list>
                        <list>com.gluonhq.charm.glisten.control.DropdownButton</list>
                        <list>com.gluonhq.charm.glisten.control.Icon</list>
                        <list>com.gluonhq.charm.glisten.control.ToggleButtonGroup</list>
                        <list>com.gluonhq.charm.glisten.control.SettingsPane</list>
                        <list>javafx.scene.control.Button</list>
                        <list>javafx.scene.control.CheckBox</list>
                        <list>javafx.scene.control.CheckMenuItem</list>
                        <list>javafx.scene.control.ColorPicker</list>
                        <list>javafx.scene.control.ComboBox</list>
                        <list>javafx.scene.control.Menu</list>
                        <list>javafx.scene.control.MenuButton</list>
                        <list>javafx.scene.control.MenuItem</list>
                        <list>javafx.scene.control.RadioMenuItem</list>
                        <list>javafx.scene.control.ScrollPane</list>
                        <list>javafx.scene.control.Separator</list>
                        <list>javafx.scene.control.SeparatorMenuItem</list>
                        <list>javafx.scene.control.Slider</list>
                        <list>javafx.scene.control.SplitPane</list>
                        <list>javafx.scene.control.TextArea</list>
                        <list>javafx.scene.control.TextField</list>
                        <list>javafx.scene.control.ToggleButton</list>
                        <list>javafx.scene.image.ImageView</list>
                        <list>javafx.scene.layout.FlowPane</list>
                        <list>javafx.scene.layout.GridPane</list>
                        <list>javafx.scene.layout.HBox</list>
                    </reflectionList>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>android</id>
            <properties>
                <gluonfx.target>android</gluonfx.target>
            </properties>
        </profile>
        <profile>
            <id>ios</id>
            <properties>
                <gluonfx.target>ios</gluonfx.target>
            </properties>
        </profile>
        <profile>
            <id>ios-sim</id>
            <properties>
                <gluonfx.target>ios-sim</gluonfx.target>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>gluon-releases</id>
            <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
        </repository>
    </repositories>
</project>